# transfer-sheets-to-db-app

./: .gitlab-ci.yml  Dockerfile  README.md  app.py  conversion_rate_extractor.py  database_processor.py  docker-compose.yml  nginx.conf  pyproject.toml  sheets_data_extractor.py  telegram_notifier.py  uwsgi.ini
front/public/: index.html
front/src/: App.css  App.js
