[tool.poetry]
name = "test_kanalservis"
version = "0.1.0"
description = ""
authors = ["Lera Roldugina <l.roldugina@aitarget.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gspread = "^5.8.0"
loguru = "^0.6.0"
oauth2client = "^4.1.3"
DateTime = "^5.1"
requests = "^2.28.2"
urllib3 = "^1.26.15"
black = "^23.3.0"
flake8 = "5.0.4"
pysqlite3 = "^0.5.0"
schedule = "^1.1.0"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
